# CodeSorcerer

./: .replit  README.md  main.py  pyproject.toml  setup.py
attached_assets/: Pasted--2025-05-04-15-18-19-0000-1557-INFO-Starting-gunicorn-23-0-0-2025-05-04-15-18-19-0000-155-1746372795292.txt  Pasted--CodiumAI-s-PR-Agent-CodiumAI-https-tse4-mm-bing-net-th-id-OIP-0gILirNsi1vhFXreH8AKQHaDg-pid-1746333443226.txt  Pasted--import-as-React-from-react-2025-05-05-21-34-12-637-audit-nea-1746480913920.txt  Pasted-2025-05-05-23-29-16-084-main-INFO-Downloading-GitHub-repository-for-validation-https-github-1746487853051.txt  Pasted-NEAR-Hackathon-Auditor-Implementation-Plan-Phase-1-Repository-Analysis-Foundation-Team-Co-1746376444571.txt
audit_near/: __init__.py  ai_client.py  cli.py
audit_near/categories/: __init__.py  base_category.py  blockchain_integration.py  (+9 more)
configs/: near_hackathon.toml
docs/: plugin-implementation-guide.md  plugin-migration-guide.md  plugin-usage-guide.md  plugin_format.md
instance/: audit_near.db
prompts/: blockchain_integration.md  code_quality.md
prompts.bak/: security.md
scripts/: verify_plugin_migration.py
templates/: audit_form.html  audit_progress.html  base.html  debug_repository.html  index.html  report.html  reports.html
test_repos/ava-the-ai-agent/runeswap-solver/: Cargo.toml  README.md
test_repos/ava-the-ai-agent/runeswap-solver/src/: config.rs  lib.rs  main.rs  runeswap.rs  solver.rs  types.rs
tests/: test_categories.py  test_gitignore_handler.py  test_markdown_reporter.py  test_plugin_migration.py  test_repo_provider.py
(+408 files in other folders)
