[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "astpretty>=3.0.0",
    "astroid>=3.3.9",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "libcst>=1.7.0",
    "openai>=1.77.0",
    "pathspec>=0.12.1",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
